[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idtinc"
version = "1.0.0"
description = "Idtinc Django & DRF Library"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Kiều Văn Chương", email = "vanchuongkieu@gmail.com" }]

dependencies = [
    "Django>=3.2",
    "requests>=2.31.0",
    "djangorestframework>=3.14",
    "drf-yasg>=1.21.7",
    "minio>=7.1.2",
    "django-currentuser>=0.9.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework-simplejwt>=5.5.1"
]

[project.optional-dependencies]
firebase = ["firebase-admin>=6.6.0"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
